Refactor: implemented directory-based clean URLs, moved index to main, updated links

--- a/cases/case-feedup/index.html
+++ b/cases/case-feedup/index.html
@@ -10,13 +10,13 @@
     <meta name="case-niche" content="Фастфуд / HoReCa">
     <meta name="case-title" content="FeedUp">
     <meta name="case-desc" content="Управление репутацией: как мы превратили 70% негатива в лояльность.">
-    <meta name="case-image" content="../images/feedup-main.png">
+    <meta name="case-image" content="/images/feedup-main.png">
     <meta name="case-stat-1-val" content="100%">
     <meta name="case-stat-1-label" content="Обработка жалоб">
     <meta name="case-stat-2-val" content="LTV">
     <meta name="case-stat-2-label" content="Возврат клиентов">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
@@ -28,10 +28,10 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles">Полезное</a>
-                    <a href="../index">Главная</a>
+                    <a href="/articles/">Полезное</a>
+                    <a href="/main/">Главная</a>
                     <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
@@ -42,8 +42,8 @@
     <section class="section case-hero-section">
         <div class="container">
             <div class="breadcrumbs mb-40">
-                <a href="../index">Главная</a> <span class="sep">></span>
-                <a href="../articles">Полезное</a> <span class="sep">></span>
+                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/articles/">Полезное</a> <span class="sep">></span>
                 <span class="current">FeedUp</span>
             </div>
 
@@ -52,7 +52,7 @@
                 <!-- Left: Main Title Card (With BG Anchor) -->
                 <div class="case-main-card">
                     <!-- MAIN PHOTO ANCHOR -->
-                    <img src="../images/feedup-main.png" class="case-hero-bg" alt="FeedUp Case">
+                    <img src="/images/feedup-main.png" class="case-hero-bg" alt="FeedUp Case">
 
                     <div
                         style="font-size: 14px; color: var(--accent); margin-bottom: 20px; letter-spacing: 0.1em; font-weight: 700; position: relative; z-index: 2;">
@@ -175,13 +175,13 @@
 
             <footer class="site-footer">
         <div class="container">
-            <a href="../index" class="footer-logo">LOOPS</a>
+            <a href="/main/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
 
-    <script src="../js/cases-data.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/cases-data.js"></script>
+    <script src="/js/script.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
