--- a/cases/case-izzy/index.html
+++ b/cases/case-izzy/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кейс: Basalt - LOOPS</title>
+    <title>Кейс: IZZY - LOOPS</title>
     <!-- DATA FOR CARD GEN -->
-    <meta name="case-category" content="b2b">
-    <meta name="case-niche" content="Производство / B2B">
-    <meta name="case-title" content="Basalt Uzbekistan">
-    <meta name="case-desc" content="ABM маркетинг, автоматизация Bitrix24 и выход на экспорт.">
-    <meta name="case-image" content="../images/basalt-main.png">
-    <meta name="case-stat-1-val" content="3 млрд">
-    <meta name="case-stat-1-label" content="Сделка с таргета">
-    <meta name="case-stat-2-val" content="4+">
-    <meta name="case-stat-2-label" content="Встречи/мес (Крупный Опт)">
+    <meta name="case-category" content="services">
+    <meta name="case-niche" content="Кикшеринг / Транспорт">
+    <meta name="case-title" content="IZZY Scooters">
+    <meta name="case-desc" content="Рост базы на 97% и автоворонка выдачи промокодов.">
+    <meta name="case-image" content="/images/izzy-main.png">
+    <meta name="case-stat-1-val" content="+97%">
+    <meta name="case-stat-1-label" content="Рост базы">
+    <meta name="case-stat-2-val" content="+20%">
+    <meta name="case-stat-2-label" content="Время аренды">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
@@ -28,10 +28,10 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles">Полезное</a>
-                    <a href="../index">Главная</a>
+                    <a href="/articles/">Полезное</a>
+                    <a href="/main/">Главная</a>
                     <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
@@ -42,9 +42,9 @@
     <section class="section case-hero-section">
         <div class="container">
             <div class="breadcrumbs mb-40">
-                <a href="../index">Главная</a> <span class="sep">></span>
-                <a href="../articles">Полезное</a> <span class="sep">></span>
-                <span class="current">Basalt</span>
+                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/articles/">Полезное</a> <span class="sep">></span>
+                <span class="current">IZZY</span>
             </div>
 
             <!-- DASHBOARD GRID -->
@@ -52,27 +52,27 @@
                 <!-- Left: Main Title Card (With BG Anchor) -->
                 <div class="case-main-card">
                     <!-- MAIN PHOTO ANCHOR -->
-                    <img src="../images/basalt-main.png" class="case-hero-bg" alt="Basalt Case">
+                    <img src="/images/izzy-main.png" class="case-hero-bg" alt="IZZY Case">
 
                     <div
                         style="font-size: 14px; color: var(--accent); margin-bottom: 20px; letter-spacing: 0.1em; font-weight: 700; position: relative; z-index: 2;">
-                        КЕЙС: ПРОИЗВОДСТВО & B2B
+                        КЕЙС: ГОРОДСКОЙ ТРАНСПОРТ
                     </div>
-                    <h1 class="case-hero-title">Производство <br><span class="text-accent">Basalt</span></h1>
+                    <h1 class="case-hero-title">Электросамокаты <br><span class="text-accent">IZZY</span></h1>
                     <p class="case-hero-desc">
-                        Комплексный маркетинг для завода: от LinkedIn до маркетплейсов и автоматизации CRM.
+                        Масштабирование сервиса кикшеринга: от анализа локаций до геймифицированной автоворонки.
                     </p>
                 </div>
 
                 <!-- Right: Stats Stack -->
                 <div class="case-stat-stack">
                     <div class="case-stat-card">
-                        <div class="case-stat-big text-accent">3 млрд</div>
-                        <div class="case-stat-label">Одна из сделок с таргета</div>
+                        <div class="case-stat-big text-accent">+97%</div>
+                        <div class="case-stat-label">Рост базы (100k+ новых)</div>
                     </div>
                     <div class="case-stat-card">
-                        <div class="case-stat-big">2500+</div>
-                        <div class="case-stat-label">Карточек на маркетплейсах</div>
+                        <div class="case-stat-big">+20%</div>
+                        <div class="case-stat-label">К длительности аренды</div>
                     </div>
                 </div>
             </div>
@@ -81,23 +81,20 @@
             <div class="case-meta-bar">
                 <div class="meta-group">
                     <div class="meta-label">Клиент</div>
-                    <div class="meta-value">Basalt Uzbekistan</div>
+                    <div class="meta-value">IZZY Scooters</div>
                 </div>
                 <div class="meta-group">
-                    <div class="meta-label">Локация</div>
-                    <div class="meta-value">Узбекистан / Экспорт</div>
+                    <div class="meta-label">Ниша</div>
+                    <div class="meta-value">Кикшеринг</div>
                 </div>
                 <div class="meta-group">
-                    <div class="meta-label">Инструменты</div>
-                    <div class="meta-value">LinkedIn, Bitrix24, Marketplaces</div>
+                    <div class="meta-label">Задача</div>
+                    <div class="meta-value">Масштабирование</div>
                 </div>
                 <div class="meta-group">
                     <div class="meta-label">Результат</div>
-                    <div class="meta-value">Системный B2B маркетинг</div>
+                    <div class="meta-value">100.000 Новых Юзеров</div>
                 </div>
-
-                <!-- CLIENT LOGO (Placeholder or Reuse) -->
-                <!-- <img src="../images/basalt-logo.png" class="case-meta-logo" alt="Basalt Logo"> -->
             </div>
         </div>
     </section>
@@ -109,9 +106,9 @@
 
                 <!-- STICKY FEEDBACK WIDGET -->
                 <div class="sticky-widget sticky-cta">
-                    <div style="font-size: 30px; margin-bottom: 15px;">🚀</div>
-                    <h3>Хотите такой же результат?</h3>
-                    <p class="text-muted">Мы бесплатно разберем вашу ситуацию и предложим стратегию.</p>
+                    <div style="font-size: 30px; margin-bottom: 15px;">🛴</div>
+                    <h3>Нужен взрывной рост?</h3>
+                    <p class="text-muted">Разработаем стратегию масштабирования для вашего сервиса.</p>
                     <a href="../index#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
@@ -119,39 +116,35 @@
                 <!-- CONTENT COLUMN -->
                 <div class="case-content-col">
                     <div class="content-block">
-                        <h2>Что мы внедрили</h2>
+                        <h2>Что было сделано</h2>
                         <p>
-                            Для крупного производственного предприятия мы реализовали стратегию "веерного" присутствия,
-                            охватив как профессиональные сети, так и массовые B2B площадки.
+                            Мы подошли к задаче комплексно, объединив маркетинговую стратегию с глубоким анализом
+                            операционных данных.
                         </p>
                         <ul class="gold-list">
-                            <li><strong>ABM маркетинг в LinkedIn:</strong> Точечный выход на ЛПР крупных строительных и
-                                производственных компаний за рубежом.</li>
-                            <li><strong>Продуктовая воронка:</strong> Загрузка 2500+ карточек товаров на Alibaba, Olx,
-                                Prom.uz, Glotr.uz.</li>
-                            <li><strong>Аналитические дашборды:</strong> Полная прозрачность продаж и эффективности
-                                каналов.</li>
-                            <li><strong>Автоматизация Bitrix24:</strong> Описали и оцифровали бизнес-процессы, чтобы ни
-                                один лид не терялся.</li>
-                            <li><strong>Отдел КЦ:</strong> Сформировали и обучили собственный колл-центр для обработки
-                                входящего трафика.</li>
+                            <li><strong>Маркетинговая стратегия:</strong> Разработали позиционирование и визуальный
+                                стиль (яркий, молодежный, динамичный).</li>
+                            <li><strong>Анализ локаций:</strong> Определили самые прибыльные точки для размещения
+                                самокатов, что напрямую увеличило доходность.</li>
+                            <li><strong>Автоворонка промокодов:</strong> Внедрили систему автоматической выдачи
+                                промокодов по подписке в боте, снизив стоимость привлечения (CAC).</li>
+                            <li><strong>Операционная эффективность:</strong> Оптимизировали внутренние процессы команды
+                                для работы с возросшим потоком пользователей.</li>
                         </ul>
                     </div>
 
                     <div class="content-block">
-                        <h2>Результаты в цифрах</h2>
+                        <h2>Результаты</h2>
                         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 30px;">
                             <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px;">
-                                <div style="font-size: 24px; font-weight: 800; color: #fff; margin-bottom: 5px;">3 млрд
-                                    сўм</div>
-                                <div style="font-size: 14px; color: var(--text-muted);">Крупнейшая сделка с таргета
-                                </div>
+                                <div style="font-size: 24px; font-weight: 800; color: #fff; margin-bottom: 5px;">100
+                                    000+</div>
+                                <div style="font-size: 14px; color: var(--text-muted);">Новых пользователей</div>
                             </div>
                             <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px;">
-                                <div style="font-size: 24px; font-weight: 800; color: #fff; margin-bottom: 5px;">4+
-                                    встречи</div>
-                                <div style="font-size: 14px; color: var(--text-muted);">Ежемесячно с крупными байерами
+                                <div style="font-size: 24px; font-weight: 800; color: #fff; margin-bottom: 5px;">+20%
                                 </div>
+                                <div style="font-size: 14px; color: var(--text-muted);">Среднее время поездки</div>
                             </div>
                         </div>
                     </div>
@@ -173,19 +166,19 @@
 
             <footer class="site-footer">
         <div class="container">
-            <a href="../index" class="footer-logo">LOOPS</a>
+            <a href="/main/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
 
-    <script src="../js/cases-data.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/cases-data.js"></script>
+    <script src="/js/script.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if (!window.casesData) return;
 
-            const currentCaseId = 'basalt'; // Current Page ID
+            const currentCaseId = 'izzy'; // Current Page ID
             const grid = document.getElementById('seeAlsoGrid');
 
             // Filter out current case and get next 3
