--- a/cases/case-basalt/index.html
+++ b/cases/case-basalt/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кейс: DCO - LOOPS</title>
+    <title>Кейс: Basalt - LOOPS</title>
     <!-- DATA FOR CARD GEN -->
     <meta name="case-category" content="b2b">
-    <meta name="case-niche" content="Сантехника / Ритейл">
-    <meta name="case-title" content="DCO Euroluxe">
-    <meta name="case-desc" content="Обучение in-house команды: от съемки контента до запуска таргета.">
-    <meta name="case-image" content="../images/dco-main.png">
-    <meta name="case-stat-1-val" content="45 млн+">
-    <meta name="case-stat-1-label" content="Выручка с рекламы">
-    <meta name="case-stat-2-val" content="$200">
-    <meta name="case-stat-2-label" content="Рекламный бюджет">
+    <meta name="case-niche" content="Производство / B2B">
+    <meta name="case-title" content="Basalt Uzbekistan">
+    <meta name="case-desc" content="ABM маркетинг, автоматизация Bitrix24 и выход на экспорт.">
+    <meta name="case-image" content="/images/basalt-main.png">
+    <meta name="case-stat-1-val" content="3 млрд">
+    <meta name="case-stat-1-label" content="Сделка с таргета">
+    <meta name="case-stat-2-val" content="4+">
+    <meta name="case-stat-2-label" content="Встречи/мес (Крупный Опт)">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
@@ -28,10 +28,10 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles">Полезное</a>
-                    <a href="../index">Главная</a>
+                    <a href="/articles/">Полезное</a>
+                    <a href="/main/">Главная</a>
                     <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
@@ -42,9 +42,9 @@
     <section class="section case-hero-section">
         <div class="container">
             <div class="breadcrumbs mb-40">
-                <a href="../index">Главная</a> <span class="sep">></span>
-                <a href="../articles">Полезное</a> <span class="sep">></span>
-                <span class="current">DCO</span>
+                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/articles/">Полезное</a> <span class="sep">></span>
+                <span class="current">Basalt</span>
             </div>
 
             <!-- DASHBOARD GRID -->
@@ -52,27 +52,27 @@
                 <!-- Left: Main Title Card (With BG Anchor) -->
                 <div class="case-main-card">
                     <!-- MAIN PHOTO ANCHOR -->
-                    <img src="../images/dco-main.png" class="case-hero-bg" alt="DCO Case">
+                    <img src="/images/basalt-main.png" class="case-hero-bg" alt="Basalt Case">
 
                     <div
                         style="font-size: 14px; color: var(--accent); margin-bottom: 20px; letter-spacing: 0.1em; font-weight: 700; position: relative; z-index: 2;">
-                        КЕЙС: САНТЕХНИКА
+                        КЕЙС: ПРОИЗВОДСТВО & B2B
                     </div>
-                    <h1 class="case-hero-title">Магазин <br><span class="text-accent">DCO Euroluxe</span></h1>
+                    <h1 class="case-hero-title">Производство <br><span class="text-accent">Basalt</span></h1>
                     <p class="case-hero-desc">
-                        Как мы построили отдел маркетинга внутри компании за 1 месяц, обучив сотрудников с нуля.
+                        Комплексный маркетинг для завода: от LinkedIn до маркетплейсов и автоматизации CRM.
                     </p>
                 </div>
 
                 <!-- Right: Stats Stack -->
                 <div class="case-stat-stack">
                     <div class="case-stat-card">
-                        <div class="case-stat-big text-accent">45.9 млн</div>
-                        <div class="case-stat-label">Выручка (UZS)</div>
+                        <div class="case-stat-big text-accent">3 млрд</div>
+                        <div class="case-stat-label">Одна из сделок с таргета</div>
                     </div>
                     <div class="case-stat-card">
-                        <div class="case-stat-big">$200</div>
-                        <div class="case-stat-label">Бюджет на рекламу</div>
+                        <div class="case-stat-big">2500+</div>
+                        <div class="case-stat-label">Карточек на маркетплейсах</div>
                     </div>
                 </div>
             </div>
@@ -81,20 +81,23 @@
             <div class="case-meta-bar">
                 <div class="meta-group">
                     <div class="meta-label">Клиент</div>
-                    <div class="meta-value">DCO Euroluxe</div>
+                    <div class="meta-value">Basalt Uzbekistan</div>
                 </div>
                 <div class="meta-group">
-                    <div class="meta-label">Ниша</div>
-                    <div class="meta-value">Премиум Сантехника</div>
+                    <div class="meta-label">Локация</div>
+                    <div class="meta-value">Узбекистан / Экспорт</div>
                 </div>
                 <div class="meta-group">
-                    <div class="meta-label">Услуга</div>
-                    <div class="meta-value">Обучение / Консалтинг</div>
+                    <div class="meta-label">Инструменты</div>
+                    <div class="meta-value">LinkedIn, Bitrix24, Marketplaces</div>
                 </div>
                 <div class="meta-group">
-                    <div class="meta-label">Срок</div>
-                    <div class="meta-value">1 Месяц</div>
+                    <div class="meta-label">Результат</div>
+                    <div class="meta-value">Системный B2B маркетинг</div>
                 </div>
+
+                <!-- CLIENT LOGO (Placeholder or Reuse) -->
+                <!-- <img src="/images/basalt-logo.png" class="case-meta-logo" alt="Basalt Logo"> -->
             </div>
         </div>
     </section>
@@ -107,9 +110,8 @@
                 <!-- STICKY FEEDBACK WIDGET -->
                 <div class="sticky-widget sticky-cta">
                     <div style="font-size: 30px; margin-bottom: 15px;">🚀</div>
-                    <h3>Хотите обучить команду?</h3>
-                    <p class="text-muted">Мы передадим свои знания вашим сотрудникам, чтобы маркетинг работал внутри.
-                    </p>
+                    <h3>Хотите такой же результат?</h3>
+                    <p class="text-muted">Мы бесплатно разберем вашу ситуацию и предложим стратегию.</p>
                     <a href="../index#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
@@ -117,43 +119,39 @@
                 <!-- CONTENT COLUMN -->
                 <div class="case-content-col">
                     <div class="content-block">
-                        <h2>Задача: In-house Команда</h2>
+                        <h2>Что мы внедрили</h2>
                         <p>
-                            Клиент хотел не просто заказывать услуги агентства, а иметь компетенции внутри компании.
-                            Задача была за 1 месяц обучить сотрудника полному циклу SMM и таргета.
-                        </p>
-                    </div>
-
-                    <div class="content-block">
-                        <h2>Что мы сделали (Программа обучения)</h2>
-                        <p>
-                            Мы провели интенсивное практическое обучение на реальных бюджетах. Сотрудник научился
-                            самостоятельно:
+                            Для крупного производственного предприятия мы реализовали стратегию "веерного" присутствия,
+                            охватив как профессиональные сети, так и массовые B2B площадки.
                         </p>
                         <ul class="gold-list">
-                            <li><strong>Контент-продакшн:</strong> Проводить профессиональную фото и видео съемку
-                                товаров (сантехники).</li>
-                            <li><strong>Таргетированная реклама:</strong> Настраивать и запускать кампании в
-                                Instagram/Facebook.</li>
-                            <li><strong>Копирайтинг и Дизайн:</strong> Писать продающие тексты и создавать дизайн
-                                постов.</li>
-                            <li><strong>Аналитика:</strong> Делать базовый анализ метрик и составлять отчетность по
-                                продажам.</li>
+                            <li><strong>ABM маркетинг в LinkedIn:</strong> Точечный выход на ЛПР крупных строительных и
+                                производственных компаний за рубежом.</li>
+                            <li><strong>Продуктовая воронка:</strong> Загрузка 2500+ карточек товаров на Alibaba, Olx,
+                                Prom.uz, Glotr.uz.</li>
+                            <li><strong>Аналитические дашборды:</strong> Полная прозрачность продаж и эффективности
+                                каналов.</li>
+                            <li><strong>Автоматизация Bitrix24:</strong> Описали и оцифровали бизнес-процессы, чтобы ни
+                                один лид не терялся.</li>
+                            <li><strong>Отдел КЦ:</strong> Сформировали и обучили собственный колл-центр для обработки
+                                входящего трафика.</li>
                         </ul>
                     </div>
 
                     <div class="content-block">
-                        <h2>Результат за 1 месяц</h2>
-                        <p>
-                            Ученик самостоятельно запустил рекламу с бюджетом всего <strong>$200</strong>.
-                        </p>
-                        <div
-                            style="background: rgba(255,255,255,0.05); padding: 30px; border-radius: 10px; border: 1px solid rgba(250, 193, 77, 0.2); margin-top: 20px; text-align: center;">
-                            <div style="font-size: 14px; color: var(--text-muted); margin-bottom: 10px;">ВОЗВРАТ
-                                ИНВЕСТИЦИЙ</div>
-                            <div style="font-size: 48px; font-weight: 800; color: #fff; line-height: 1;">45 905 000
+                        <h2>Результаты в цифрах</h2>
+                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 30px;">
+                            <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px;">
+                                <div style="font-size: 24px; font-weight: 800; color: #fff; margin-bottom: 5px;">3 млрд
+                                    сўм</div>
+                                <div style="font-size: 14px; color: var(--text-muted);">Крупнейшая сделка с таргета
+                                </div>
                             </div>
-                            <div style="font-size: 18px; color: var(--accent); margin-top: 5px;">Сум суммарной выручки
+                            <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px;">
+                                <div style="font-size: 24px; font-weight: 800; color: #fff; margin-bottom: 5px;">4+
+                                    встречи</div>
+                                <div style="font-size: 14px; color: var(--text-muted);">Ежемесячно с крупными байерами
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -175,19 +173,19 @@
 
             <footer class="site-footer">
         <div class="container">
-            <a href="../index" class="footer-logo">LOOPS</a>
+            <a href="/main/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
 
-    <script src="../js/cases-data.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/cases-data.js"></script>
+    <script src="/js/script.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if (!window.casesData) return;
 
-            const currentCaseId = 'dco'; // Current Page ID
+            const currentCaseId = 'basalt'; // Current Page ID
             const grid = document.getElementById('seeAlsoGrid');
 
             // Filter out current case and get next 3
