--- a/cases/case-chery/index.html
+++ b/cases/case-chery/index.html
@@ -10,13 +10,13 @@
     <meta name="case-niche" content="Автобизнес">
     <meta name="case-title" content="Дилерский центр Chery">
     <meta name="case-desc" content="Снижение стоимости лида в 3 раза через автоворонку.">
-    <meta name="case-image" content="../images/chery-main.png">
+    <meta name="case-image" content="/images/chery-main.png">
     <meta name="case-stat-1-val" content="450+">
     <meta name="case-stat-1-label" content="Заявок/мес">
     <meta name="case-stat-2-val" content="$4.5">
     <meta name="case-stat-2-label" content="Цена Лида">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
@@ -28,10 +28,10 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles">Полезное</a>
-                    <a href="../index">Главная</a>
+                    <a href="/articles/">Полезное</a>
+                    <a href="/main/">Главная</a>
                     <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
@@ -42,8 +42,8 @@
     <section class="section case-hero-section">
         <div class="container">
             <div class="breadcrumbs mb-40">
-                <a href="../index">Главная</a> <span class="sep">></span>
-                <a href="../articles">Полезное</a> <span class="sep">></span>
+                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/articles/">Полезное</a> <span class="sep">></span>
                 <span class="current">Chery</span>
             </div>
 
@@ -52,7 +52,7 @@
                 <!-- Left: Main Title Card (With BG Anchor) -->
                 <div class="case-main-card">
                     <!-- MAIN PHOTO ANCHOR -->
-                    <img src="../images/chery-main.png" class="case-hero-bg" alt="Chery Showroom">
+                    <img src="/images/chery-main.png" class="case-hero-bg" alt="Chery Showroom">
 
                     <div
                         style="font-size: 14px; color: var(--accent); margin-bottom: 20px; letter-spacing: 0.1em; font-weight: 700; position: relative; z-index: 2;">
@@ -98,7 +98,7 @@
                 </div>
 
                 <!-- CLIENT LOGO -->
-                <img src="../images/chery-logo.png" class="case-meta-logo" alt="Chery Logo">
+                <img src="/images/chery-logo.png" class="case-meta-logo" alt="Chery Logo">
             </div>
         </div>
     </section>
@@ -178,13 +178,13 @@
 
             <footer class="site-footer">
         <div class="container">
-            <a href="../index" class="footer-logo">LOOPS</a>
+            <a href="/main/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
 
-    <script src="../js/cases-data.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/cases-data.js"></script>
+    <script src="/js/script.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -198,9 +198,9 @@
 
             others.forEach(item => {
                 // Adjust paths since we are in /cases/ subdirectory
-                // The URLs in registry are "cases/foo.html", we need "foo.html" (relative) or "../cases/foo.html"
+                // The URLs in registry are "cases/foo/", we need "foo/" (relative) or "../cases/foo/"
                 // But wait, the registry has 'cases/case-chery.html'. 
-                // If I am in cases/case-chery.html, I can link to "../cases/case-rebar.html" or just "case-rebar.html"
+                // If I am in cases/case-chery.html, I can link to "../cases/case-rebar/" or just "case-rebar/"
 
                 // DATA URL FORMAT: 'cases/case-rebar.html'
                 // PAGE CONTEXT: 'cases/' folder.
