--- a/cases/case-dco/index.html
+++ b/cases/case-dco/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кейс: IZZY - LOOPS</title>
+    <title>Кейс: DCO - LOOPS</title>
     <!-- DATA FOR CARD GEN -->
-    <meta name="case-category" content="services">
-    <meta name="case-niche" content="Кикшеринг / Транспорт">
-    <meta name="case-title" content="IZZY Scooters">
-    <meta name="case-desc" content="Рост базы на 97% и автоворонка выдачи промокодов.">
-    <meta name="case-image" content="../images/izzy-main.png">
-    <meta name="case-stat-1-val" content="+97%">
-    <meta name="case-stat-1-label" content="Рост базы">
-    <meta name="case-stat-2-val" content="+20%">
-    <meta name="case-stat-2-label" content="Время аренды">
+    <meta name="case-category" content="b2b">
+    <meta name="case-niche" content="Сантехника / Ритейл">
+    <meta name="case-title" content="DCO Euroluxe">
+    <meta name="case-desc" content="Обучение in-house команды: от съемки контента до запуска таргета.">
+    <meta name="case-image" content="/images/dco-main.png">
+    <meta name="case-stat-1-val" content="45 млн+">
+    <meta name="case-stat-1-label" content="Выручка с рекламы">
+    <meta name="case-stat-2-val" content="$200">
+    <meta name="case-stat-2-label" content="Рекламный бюджет">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
@@ -28,10 +28,10 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles">Полезное</a>
-                    <a href="../index">Главная</a>
+                    <a href="/articles/">Полезное</a>
+                    <a href="/main/">Главная</a>
                     <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
@@ -42,9 +42,9 @@
     <section class="section case-hero-section">
         <div class="container">
             <div class="breadcrumbs mb-40">
-                <a href="../index">Главная</a> <span class="sep">></span>
-                <a href="../articles">Полезное</a> <span class="sep">></span>
-                <span class="current">IZZY</span>
+                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/articles/">Полезное</a> <span class="sep">></span>
+                <span class="current">DCO</span>
             </div>
 
             <!-- DASHBOARD GRID -->
@@ -52,27 +52,27 @@
                 <!-- Left: Main Title Card (With BG Anchor) -->
                 <div class="case-main-card">
                     <!-- MAIN PHOTO ANCHOR -->
-                    <img src="../images/izzy-main.png" class="case-hero-bg" alt="IZZY Case">
+                    <img src="/images/dco-main.png" class="case-hero-bg" alt="DCO Case">
 
                     <div
                         style="font-size: 14px; color: var(--accent); margin-bottom: 20px; letter-spacing: 0.1em; font-weight: 700; position: relative; z-index: 2;">
-                        КЕЙС: ГОРОДСКОЙ ТРАНСПОРТ
+                        КЕЙС: САНТЕХНИКА
                     </div>
-                    <h1 class="case-hero-title">Электросамокаты <br><span class="text-accent">IZZY</span></h1>
+                    <h1 class="case-hero-title">Магазин <br><span class="text-accent">DCO Euroluxe</span></h1>
                     <p class="case-hero-desc">
-                        Масштабирование сервиса кикшеринга: от анализа локаций до геймифицированной автоворонки.
+                        Как мы построили отдел маркетинга внутри компании за 1 месяц, обучив сотрудников с нуля.
                     </p>
                 </div>
 
                 <!-- Right: Stats Stack -->
                 <div class="case-stat-stack">
                     <div class="case-stat-card">
-                        <div class="case-stat-big text-accent">+97%</div>
-                        <div class="case-stat-label">Рост базы (100k+ новых)</div>
+                        <div class="case-stat-big text-accent">45.9 млн</div>
+                        <div class="case-stat-label">Выручка (UZS)</div>
                     </div>
                     <div class="case-stat-card">
-                        <div class="case-stat-big">+20%</div>
-                        <div class="case-stat-label">К длительности аренды</div>
+                        <div class="case-stat-big">$200</div>
+                        <div class="case-stat-label">Бюджет на рекламу</div>
                     </div>
                 </div>
             </div>
@@ -81,19 +81,19 @@
             <div class="case-meta-bar">
                 <div class="meta-group">
                     <div class="meta-label">Клиент</div>
-                    <div class="meta-value">IZZY Scooters</div>
+                    <div class="meta-value">DCO Euroluxe</div>
                 </div>
                 <div class="meta-group">
                     <div class="meta-label">Ниша</div>
-                    <div class="meta-value">Кикшеринг</div>
+                    <div class="meta-value">Премиум Сантехника</div>
                 </div>
                 <div class="meta-group">
-                    <div class="meta-label">Задача</div>
-                    <div class="meta-value">Масштабирование</div>
+                    <div class="meta-label">Услуга</div>
+                    <div class="meta-value">Обучение / Консалтинг</div>
                 </div>
                 <div class="meta-group">
-                    <div class="meta-label">Результат</div>
-                    <div class="meta-value">100.000 Новых Юзеров</div>
+                    <div class="meta-label">Срок</div>
+                    <div class="meta-value">1 Месяц</div>
                 </div>
             </div>
         </div>
@@ -106,9 +106,10 @@
 
                 <!-- STICKY FEEDBACK WIDGET -->
                 <div class="sticky-widget sticky-cta">
-                    <div style="font-size: 30px; margin-bottom: 15px;">🛴</div>
-                    <h3>Нужен взрывной рост?</h3>
-                    <p class="text-muted">Разработаем стратегию масштабирования для вашего сервиса.</p>
+                    <div style="font-size: 30px; margin-bottom: 15px;">🚀</div>
+                    <h3>Хотите обучить команду?</h3>
+                    <p class="text-muted">Мы передадим свои знания вашим сотрудникам, чтобы маркетинг работал внутри.
+                    </p>
                     <a href="../index#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
@@ -116,35 +117,43 @@
                 <!-- CONTENT COLUMN -->
                 <div class="case-content-col">
                     <div class="content-block">
-                        <h2>Что было сделано</h2>
+                        <h2>Задача: In-house Команда</h2>
                         <p>
-                            Мы подошли к задаче комплексно, объединив маркетинговую стратегию с глубоким анализом
-                            операционных данных.
+                            Клиент хотел не просто заказывать услуги агентства, а иметь компетенции внутри компании.
+                            Задача была за 1 месяц обучить сотрудника полному циклу SMM и таргета.
+                        </p>
+                    </div>
+
+                    <div class="content-block">
+                        <h2>Что мы сделали (Программа обучения)</h2>
+                        <p>
+                            Мы провели интенсивное практическое обучение на реальных бюджетах. Сотрудник научился
+                            самостоятельно:
                         </p>
                         <ul class="gold-list">
-                            <li><strong>Маркетинговая стратегия:</strong> Разработали позиционирование и визуальный
-                                стиль (яркий, молодежный, динамичный).</li>
-                            <li><strong>Анализ локаций:</strong> Определили самые прибыльные точки для размещения
-                                самокатов, что напрямую увеличило доходность.</li>
-                            <li><strong>Автоворонка промокодов:</strong> Внедрили систему автоматической выдачи
-                                промокодов по подписке в боте, снизив стоимость привлечения (CAC).</li>
-                            <li><strong>Операционная эффективность:</strong> Оптимизировали внутренние процессы команды
-                                для работы с возросшим потоком пользователей.</li>
+                            <li><strong>Контент-продакшн:</strong> Проводить профессиональную фото и видео съемку
+                                товаров (сантехники).</li>
+                            <li><strong>Таргетированная реклама:</strong> Настраивать и запускать кампании в
+                                Instagram/Facebook.</li>
+                            <li><strong>Копирайтинг и Дизайн:</strong> Писать продающие тексты и создавать дизайн
+                                постов.</li>
+                            <li><strong>Аналитика:</strong> Делать базовый анализ метрик и составлять отчетность по
+                                продажам.</li>
                         </ul>
                     </div>
 
                     <div class="content-block">
-                        <h2>Результаты</h2>
-                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 30px;">
-                            <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px;">
-                                <div style="font-size: 24px; font-weight: 800; color: #fff; margin-bottom: 5px;">100
-                                    000+</div>
-                                <div style="font-size: 14px; color: var(--text-muted);">Новых пользователей</div>
+                        <h2>Результат за 1 месяц</h2>
+                        <p>
+                            Ученик самостоятельно запустил рекламу с бюджетом всего <strong>$200</strong>.
+                        </p>
+                        <div
+                            style="background: rgba(255,255,255,0.05); padding: 30px; border-radius: 10px; border: 1px solid rgba(250, 193, 77, 0.2); margin-top: 20px; text-align: center;">
+                            <div style="font-size: 14px; color: var(--text-muted); margin-bottom: 10px;">ВОЗВРАТ
+                                ИНВЕСТИЦИЙ</div>
+                            <div style="font-size: 48px; font-weight: 800; color: #fff; line-height: 1;">45 905 000
                             </div>
-                            <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px;">
-                                <div style="font-size: 24px; font-weight: 800; color: #fff; margin-bottom: 5px;">+20%
-                                </div>
-                                <div style="font-size: 14px; color: var(--text-muted);">Среднее время поездки</div>
+                            <div style="font-size: 18px; color: var(--accent); margin-top: 5px;">Сум суммарной выручки
                             </div>
                         </div>
                     </div>
@@ -166,19 +175,19 @@
 
             <footer class="site-footer">
         <div class="container">
-            <a href="../index" class="footer-logo">LOOPS</a>
+            <a href="/main/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
 
-    <script src="../js/cases-data.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/cases-data.js"></script>
+    <script src="/js/script.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if (!window.casesData) return;
 
-            const currentCaseId = 'izzy'; // Current Page ID
+            const currentCaseId = 'dco'; // Current Page ID
             const grid = document.getElementById('seeAlsoGrid');
 
             // Filter out current case and get next 3
