--- a/cases/case-rebar/index.html
+++ b/cases/case-rebar/index.html
@@ -28,7 +28,7 @@
     <meta name="case-desc" content="Квалификация оптовых покупателей на автомате.">
 
     <link rel="icon" href="../images/favicon.jpg" type="image/jpeg">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
@@ -40,10 +40,10 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles">Полезное</a>
-                    <a href="../index">Главная</a>
+                    <a href="/articles/">Полезное</a>
+                    <a href="/main/">Главная</a>
                     <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
@@ -53,8 +53,8 @@
     <section class="section">
         <div class="container" style="padding-top: 100px;">
             <div class="breadcrumbs mb-40">
-                <a href="../index">Главная</a> <span class="sep">></span>
-                <a href="../articles">Полезное</a> <span class="sep">></span>
+                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/articles/">Полезное</a> <span class="sep">></span>
                 <span class="current">Производство Арматуры</span>
             </div>
 
@@ -115,10 +115,10 @@
         </div>
     </section>
 
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
     <footer class="site-footer">
         <div class="container">
-            <a href="../index" class="footer-logo">LOOPS</a>
+            <a href="/main/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
