--- a/cases/clinic/index.html
+++ b/cases/clinic/index.html
@@ -15,7 +15,7 @@
     <meta name="case-stat-1-label" content="Загрузка">
     <meta name="case-stat-2-val" content="-40%">
     <meta name="case-stat-2-label" content="Неявки">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
@@ -27,10 +27,10 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles">Полезное</a>
-                    <a href="../index">Главная</a>
+                    <a href="/articles/">Полезное</a>
+                    <a href="/main/">Главная</a>
                     <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
@@ -40,8 +40,8 @@
     <section class="section">
         <div class="container" style="padding-top: 100px;">
             <div class="breadcrumbs mb-40">
-                <a href="../index">Главная</a> <span class="sep">></span>
-                <a href="../articles">Полезное</a> <span class="sep">></span>
+                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/articles/">Полезное</a> <span class="sep">></span>
                 <span class="current">Клиника</span>
             </div>
 
@@ -50,10 +50,10 @@
         </div>
     </section>
 
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
     <footer class="site-footer">
         <div class="container">
-            <a href="../index" class="footer-logo">LOOPS</a>
+            <a href="/main/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
