--- a/cases/index.html
+++ b/cases/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image" content="https://loops.uz/images/og-cases.jpg">
 
     <link rel="icon" href="images/favicon.jpg" type="image/jpeg">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
@@ -44,10 +44,10 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="articles">Полезное</a>
-                    <a href="index">Главная</a>
+                    <a href="/articles/">Полезное</a>
+                    <a href="/main/">Главная</a>
                     <a href="index#lead-form">Контакты</a>
                 </div>
             </div>
@@ -63,7 +63,7 @@
         <div class="container text-center">
             <!-- Breadcrumbs -->
             <div class="breadcrumbs mb-20">
-                <a href="index">Главная</a> <span class="sep">></span> <span class="current">Кейсы</span>
+                <a href="/main/">Главная</a> <span class="sep">></span> <span class="current">Кейсы</span>
             </div>
 
             <!-- Headline -->
@@ -181,7 +181,7 @@
         <!-- GLOBAL GLASS FOOTER -->
         <footer class="site-footer">
             <div class="container">
-                <a href="index" class="footer-logo">LOOPS</a>
+                <a href="/main/" class="footer-logo">LOOPS</a>
                 <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
             </div>
         </footer>
@@ -195,8 +195,8 @@
         </div>
 
         <!-- SCRIPTS -->
-        <script src="js/cases-data.js"></script>
-        <script src="js/script.js"></script>
+        <script src="/js/cases-data.js"></script>
+        <script src="/js/script.js"></script>
 
         <script>
             // Static Case Renderer (Fail-safe)
