Fix: correct broken contact links in subpages to point to main lead form

--- a/cases/case-chery/index.html
+++ b/cases/case-chery/index.html
@@ -32,7 +32,7 @@
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
                     <a href="/main/">Главная</a>
-                    <a href="../index#lead-form">Контакты</a>
+                    <a href="/main/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
                     <div style="font-size: 30px; margin-bottom: 15px;">🚀</div>
                     <h3>Хотите такой же результат?</h3>
                     <p class="text-muted">Мы бесплатно разберем вашу ситуацию и предложим стратегию.</p>
-                    <a href="../index#lead-form" class="btn btn-full"
+                    <a href="/main/#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
 
