--- a/cases/case-dco/index.html
+++ b/cases/case-dco/index.html
@@ -32,7 +32,7 @@
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
                     <a href="/main/">Главная</a>
-                    <a href="../index#lead-form">Контакты</a>
+                    <a href="/main/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
                     <h3>Хотите обучить команду?</h3>
                     <p class="text-muted">Мы передадим свои знания вашим сотрудникам, чтобы маркетинг работал внутри.
                     </p>
-                    <a href="../index#lead-form" class="btn btn-full"
+                    <a href="/main/#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
 
