--- a/cases/case-rebar/index.html
+++ b/cases/case-rebar/index.html
@@ -44,7 +44,7 @@
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
                     <a href="/main/">Главная</a>
-                    <a href="../index#lead-form">Контакты</a>
+                    <a href="/main/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
                     <h3 style="margin-bottom: 20px;">Хотите такой же результат в B2B?</h3>
                     <p style="margin-bottom: 30px;">Оставьте заявку, и мы рассчитаем окупаемость системы для вашей ниши.
                     </p>
-                    <a href="../index#lead-form" class="btn"
+                    <a href="/main/#lead-form" class="btn"
                         style="background: #000; color: #fff; border: none;">Получить Расчет</a>
                 </div>
             </article>
