--- a/cases/index.html
+++ b/cases/index.html
@@ -48,7 +48,7 @@
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
                     <a href="/main/">Главная</a>
-                    <a href="index#lead-form">Контакты</a>
+                    <a href="/main/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
             <div class="bento-cta">
                 <h2>Станете нашим<br><span class="text-accent">следующим кейсом?</span></h2>
                 <p>Давайте обсудим, как получить такие же результаты в вашем проекте.</p>
-                <a href="index#lead-form" class="btn btn-primary" style="padding: 18px 40px; font-size: 16px;">Оставить
+                <a href="/main/#lead-form" class="btn btn-primary" style="padding: 18px 40px; font-size: 16px;">Оставить
                     заявку</a>
             </div>
 
