--- a/cases/case-izzy/index.html
+++ b/cases/case-izzy/index.html
@@ -32,7 +32,7 @@
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
                     <a href="/main/">Главная</a>
-                    <a href="../index#lead-form">Контакты</a>
+                    <a href="/main/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
                     <div style="font-size: 30px; margin-bottom: 15px;">🛴</div>
                     <h3>Нужен взрывной рост?</h3>
                     <p class="text-muted">Разработаем стратегию масштабирования для вашего сервиса.</p>
-                    <a href="../index#lead-form" class="btn btn-full"
+                    <a href="/main/#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
 
