feat: SEO audit fixes, homepage performance, and security improvements

--- a/cases/case-rebar/index.html
+++ b/cases/case-rebar/index.html
@@ -8,7 +8,7 @@
 
     <!-- SEO Meta Tags -->
     <meta name="description"
-        content="Кейс внедрения автоворонки для производителя композитной арматуры. Как мы автоматизировали квалификацию B2B лидов, отсеяли нецелевые звонки и получили окупаемость 400%.">
+        content="Кейс: Автоворонка для производства арматуры. Автоматическая квалификация B2B лидов, отсев нецелевых звонков и окупаемость 400%.">
     <meta name="keywords"
         content="B2B маркетинг кейс, продажа стройматериалов, автоматизация отдела продаж, CRM для производства, квалификация лидов">
     <link rel="canonical" href="https://loops.uz/cases/case-rebar">
@@ -27,7 +27,7 @@
     <meta name="case-title" content="Композитная Арматура">
     <meta name="case-desc" content="Квалификация оптовых покупателей на автомате.">
 
-    <link rel="icon" href="../images/favicon.jpg" type="image/jpeg">
+    <link rel="icon" href="/images/favicon.jpg" type="image/jpeg">
     <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
@@ -107,8 +107,8 @@
                     <h3 style="margin-bottom: 20px;">Хотите такой же результат в B2B?</h3>
                     <p style="margin-bottom: 30px;">Оставьте заявку, и мы рассчитаем окупаемость системы для вашей ниши.
                     </p>
-                    <a href="/main/#lead-form" class="btn"
-                        style="background: #000; color: #fff; border: none;">Получить Расчет</a>
+                    <a href="/main/#lead-form" class="btn" style="background: #000; color: #fff; border: none;">Получить
+                        Расчет</a>
                 </div>
             </article>
 
