--- a/cases/index.html
+++ b/cases/index.html
@@ -8,7 +8,7 @@
 
     <!-- SEO Meta Tags -->
     <meta name="description"
-        content="Посмотрите реальные кейсы внедрения Системы Перелидоза. Результаты в нишах автобизнеса, недвижимости, B2B и услуг. Отрицаем магию, показываем цифры: ROI, CPL, Выручка.">
+        content="Кейсы внедрения Системы Перелидоза: автобизнес, недвижимость, B2B. Только цифры и факты: ROI, CPL, Выручка.">
     <meta name="keywords"
         content="кейсы маркетинга, примеры автоворонок, результаты внедрения ИИ, кейсы таргет, loops результаты">
     <link rel="canonical" href="https://loops.uz/cases">
