fix: HTML validation errors, SEO improvements, remove /main/ redirect

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Система Перелидоза | Стратегия, Таргет и ИИ-Агенты | Управление Продажами</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description"
         content="Автоматизация и управление отделом продаж. Глубокая стратегия, скрипты и ИИ-агенты для квалификации лидов 24/7. Внедрение системы Перелидоза под ключ.">
     <meta name="keywords"
-        content="ИИ бот, автоворонка, таргет, автоматизация продаж, CRM, чат-бот для бизнеса, квалификация лидов">
+        content="Автоматизация продаж, ИИ-агент, чат-бот для бизнеса, квалификация лидов, таргетированная реклама, автоворонка, внедрение CRM, искусственный интеллект в продажах, Система Перелидоза, Loops System, увеличение конверсии, продажи для недвижимости, автобизнес">
     <link rel="canonical" href="https://loops.uz/">
 
     <!-- Open Graph / Facebook -->
@@ -130,7 +130,7 @@
                     <!-- YouTube Video -->
                     <iframe class="lazy-video" src="about:blank"
                         data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0"
-                        title="YouTube video player" frameborder="0"
+                        title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
@@ -411,7 +411,7 @@
                 <div class="video-wrapper">
                     <iframe class="lazy-video" src="about:blank"
                         data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=5"
-                        title="Step 1 Video" frameborder="0"
+                        title="Step 1 Video"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
@@ -435,7 +435,7 @@
                 <div class="video-wrapper">
                     <iframe class="lazy-video" src="about:blank"
                         data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=70"
-                        title="Step 2 Video" frameborder="0"
+                        title="Step 2 Video"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
@@ -458,7 +458,7 @@
                 <div class="video-wrapper">
                     <iframe class="lazy-video" src="about:blank"
                         data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=144"
-                        title="Step 3 Video" frameborder="0"
+                        title="Step 3 Video"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
@@ -482,7 +482,7 @@
                 <div class="video-wrapper">
                     <iframe class="lazy-video" src="about:blank"
                         data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=195"
-                        title="Step 4 Video" frameborder="0"
+                        title="Step 4 Video"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
@@ -567,7 +567,7 @@
                     <p class="mb-20" style="font-size: 14px;">Для старта и фильтрации спама.</p>
                     <ul class="price-list gold-checks">
                         <!-- ACTIVE: BLOCK C -->
-                        <div class="list-category">AI-СИСТЕМА И АВТОМАТИЗАЦИЯ</div>
+                        <li class="list-category">AI-СИСТЕМА И АВТОМАТИЗАЦИЯ</li>
                         <li>Внедрение квалифицирующего чат-бота (Ig/Tg)</li>
                         <li>Глубокий анализ продукта и скриптов продаж</li>
                         <li>Индивидуальные сценарии квалификации лидов</li>
@@ -575,13 +575,13 @@
                         <li>Связка с CRM (Bitrix/Amo) и Google Sheets</li>
 
                         <!-- INACTIVE: BLOCK A & B -->
-                        <div class="list-category unavailable">СТРАТЕГИЯ И УПРАВЛЕНИЕ</div>
+                        <li class="list-category unavailable">СТРАТЕГИЯ И УПРАВЛЕНИЕ</li>
                         <li class="unavailable">Интерактивный BI-Dashboard аналитики продаж</li>
                         <li class="unavailable">Формирование фин. и опер. планов для отдела продаж</li>
                         <li class="unavailable">Разработка жестких регламентов и скриптов для менеджеров</li>
                         <li class="unavailable">Глубокий аудит отдела маркетинга и всех активностей</li>
 
-                        <div class="list-category unavailable">РЕКЛАМА И ТРАФИК</div>
+                        <li class="list-category unavailable">РЕКЛАМА И ТРАФИК</li>
                         <li class="unavailable">Комплексный аудит текущей рекламы и поиск точек роста</li>
                         <li class="unavailable">Стратегия захвата рынка (JTBD)</li>
                         <li class="unavailable">Разработка баннеров: Дизайн + Продающий текст</li>
@@ -603,13 +603,13 @@
                     <p class="mb-20" style="font-size: 14px;">Комплексное решение "под ключ".</p>
                     <ul class="price-list gold-checks">
                         <!-- ACTIVE: BLOCK B & C -->
-                        <div class="list-category">РЕКЛАМА И ТРАФИК</div>
+                        <li class="list-category">РЕКЛАМА И ТРАФИК</li>
                         <li>Комплексный аудит текущей рекламы и поиск точек роста</li>
                         <li>Стратегия захвата рынка (JTBD)</li>
                         <li>Разработка баннеров: Дизайн + Продающий текст</li>
                         <li>Запуск и управление рекламой (Meta Ads)</li>
 
-                        <div class="list-category">AI-СИСТЕМА И АВТОМАТИЗАЦИЯ</div>
+                        <li class="list-category">AI-СИСТЕМА И АВТОМАТИЗАЦИЯ</li>
                         <li>Внедрение квалифицирующего чат-бота (Ig/Tg)</li>
                         <li>Глубокий анализ продукта и скриптов продаж</li>
                         <li>Индивидуальные сценарии квалификации лидов</li>
@@ -617,7 +617,7 @@
                         <li>Связка с CRM (Bitrix/Amo) и Google Sheets</li>
 
                         <!-- INACTIVE: BLOCK A -->
-                        <div class="list-category unavailable">СТРАТЕГИЯ И УПРАВЛЕНИЕ</div>
+                        <li class="list-category unavailable">СТРАТЕГИЯ И УПРАВЛЕНИЕ</li>
                         <li class="unavailable">Интерактивный BI-Dashboard аналитики продаж</li>
                         <li class="unavailable">Формирование фин. и опер. планов для отдела продаж</li>
                         <li class="unavailable">Разработка жестких регламентов и скриптов для менеджеров</li>
@@ -638,19 +638,19 @@
                     <p class="mb-20" style="font-size: 14px;">Для крупных отделов продаж.</p>
                     <ul class="price-list gold-checks">
                         <!-- ACTIVE: ALL BLOCKS -->
-                        <div class="list-category">СТРАТЕГИЯ И УПРАВЛЕНИЕ</div>
+                        <li class="list-category">СТРАТЕГИЯ И УПРАВЛЕНИЕ</li>
                         <li>Интерактивный BI-Dashboard аналитики продаж</li>
                         <li>Формирование фин. и опер. планов для отдела продаж</li>
                         <li>Разработка жестких регламентов и скриптов для менеджеров</li>
                         <li>Глубокий аудит отдела маркетинга и всех активностей</li>
 
-                        <div class="list-category">РЕКЛАМА И ТРАФИК</div>
+                        <li class="list-category">РЕКЛАМА И ТРАФИК</li>
                         <li>Комплексный аудит текущей рекламы и поиск точек роста</li>
                         <li>Стратегия захвата рынка (JTBD)</li>
                         <li>Разработка баннеров: Дизайн + Продающий текст</li>
                         <li>Запуск и управление рекламой (Meta Ads)</li>
 
-                        <div class="list-category">AI-СИСТЕМА И АВТОМАТИЗАЦИЯ</div>
+                        <li class="list-category">AI-СИСТЕМА И АВТОМАТИЗАЦИЯ</li>
                         <li>Внедрение квалифицирующего чат-бота (Ig/Tg)</li>
                         <li>Глубокий анализ продукта и скриптов продаж</li>
                         <li>Индивидуальные сценарии квалификации лидов</li>
