fix: favicon paths and remaining /main/ links

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <title>404 | Страница не найдена | LOOPS</title>
     <meta name="robots" content="noindex, follow">
 
-    <link rel="icon" href="images/favicon.jpg" type="image/jpeg">
+    <link rel="icon" href="/images/favicon.jpg" type="image/jpeg">
     <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
@@ -78,11 +78,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
                     <a href="/cases/">Кейсы</a>
                     <a href="/articles/">Контент</a>
-                    <a href="/main/#lead-form">Контакты</a>
+                    <a href="/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
             </p>
 
             <div class="error-nav">
-                <a href="/main/" class="btn">На Главную</a>
+                <a href="/" class="btn">На Главную</a>
                 <a href="/cases/" class="btn-outline">Смотреть Кейсы</a>
                 <a href="/articles/" class="btn-outline">Читать Статьи</a>
             </div>
@@ -111,7 +111,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <a href="/main/" class="footer-logo">LOOPS</a>
+            <a href="/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
