--- a/cases/index.html
+++ b/cases/index.html
@@ -21,7 +21,7 @@
         content="Как наши клиенты делают X3 к выручке с помощью ИИ и таргета. Читайте подробные разборы.">
     <meta property="og:image" content="https://loops.uz/images/og-cases.jpg">
 
-    <link rel="icon" href="images/favicon.jpg" type="image/jpeg">
+    <link rel="icon" href="/images/favicon.jpg" type="image/jpeg">
     <link rel="stylesheet" href="/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
